[package]
name = "poc-framework"
version = "0.4.0"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [ "solana", "smart", "contracts",]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.12.1"
bincode = "1.3.3"
rand = "0.7.3"
tempfile = "3.2.0"
borsh = "0.10.4"
solana-sdk = "~2.3"
solana-program = "~2.3"
solana-logger = "~2.3"
solana-runtime = {version = "~2.3", features = ["dev-context-only-utils"]}
solana-transaction-status = "~2.3"
solana-cli-output = "~2.3"
solana-accounts-db = "~2.3"
solana-client = "~2.3"
solana-program-runtime = "~2.3"
solana-ledger = "~2.3"
solana-svm = "~2.3"
spl-token-2022 = "10.0.0"
spl-token = "8.0.0"
spl-memo = "6.0.0"
spl-associated-token-account = "7.0.0"
serde = "1.0.228"
sha2 = "0.10.9"
once_cell = "1.21.3"
